--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "class-variance-authority": "^0.6.0",
+    "clsx": "^1.2.1",
+    "cva": "^0.0.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "next": "13.2.3",
@@ -26,6 +29,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swr": "^2.1.5",
+    "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
     "zod": "^3.21.4"
