:red_cỉccle: :hammer: update MovieList

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cva": "^0.0.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "lodash": "^4.17.21",
     "next": "13.2.3",
     "next-auth": "^4.22.1",
     "postcss": "8.4.23",
@@ -35,6 +36,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.195",
     "prisma": "^4.14.1"
   }
 }
